Updating the positionable docs.

--- a/layout/positionable/positionable.html
+++ b/layout/positionable/positionable.html
@@ -5,16 +5,17 @@
 
 		
 		<style type="text/css">
-			body, legend {
+			body, legend, .demo {
 				font-family: Verdana, Tahoma, sans-serif;
+				overflow: hidden;
 			}
 			div#parent {
-				width: 400px;
+				width: 100px;
 				height: 100px;
-				line-height: 100px;
+				line-height: 20px;
 				margin: 10px auto;
 				padding: 5px;
-				
+				float: right;
 				border: 1px solid #777;
 				background-color: #fbca93;
 				text-align: center;
