--- a/layout/split/demo.html
+++ b/layout/split/demo.html
@@ -5,14 +5,20 @@
     <title>splitter</title>
     <link type="text/css" href="../resize/resize.css" rel="stylesheet" />
     <style type='text/css'>
-      #container {
+      .column {
+        float: left;
+      }
+      .column h4 {
+        margin-left: 20px;
+      }
+      .container {
         border: solid 1px;
-        width: 350px;
-        height: 400px;
+        width: 300px;
+        height: 200px;
         margin: 10px;
         position: relative;
       }
-      #container.mxui_layout_split .vsplitter {
+      .mxui_layout_split .vsplitter {
         width: 10px;
       }
       .panel {
@@ -22,21 +28,48 @@
 </head>
 <body>
 <div id="demo-html">
-<div id="container" class="container vertical-splitter">
-  <div class="panel" style="float:left;width:200px;">
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-  </div>
-  <div class="panel" style="float:left;width:200px;">
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+<div class="column">
+  <h4>Vertical</h4>
+  <div id="container1" class="container vertical-splitter">
+    <div class="panel" style="float:left;width:200px;">
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+    </div>
+    <div class="panel" style="float:left;width:200px;">
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+    </div>
   </div>
 </div>
+
+<div class="column">
+  <h4>Horizontal</h4>
+  <div id="container2" class="container horizontal-splitter">
+    <div class="panel" style="width:100%;height:200px;">
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+    </div>
+    <div class="panel" style="width:100%;height:200px;">
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+    </div>
+  </div>
+</div>
+
+<br clear="all">
 </div>
 
 <script type='text/javascript' src='../../../steal/steal.js'></script>
 <script type='text/javascript'>
-steal('mxui/layout/split','mxui/layout/resize').then(function(){
-  $('#container').mxui_layout_split({ direction: "vertical", panelClass: "panel" })
-    .mxui_layout_resize();
+steal('mxui/layout/split/split.css',
+      'mxui/layout/split',
+      'mxui/layout/resize')
+.then(function(){
+    $('#container1').mxui_layout_split({
+        direction: "vertical",
+        panelClass: "panel"
+    }).mxui_layout_resize();
+    
+    $('#container2').mxui_layout_split({
+        direction: "horizontal",
+        panelClass: "panel"
+    });
 });
 </script>
 </body>
