--- a/layout/resize/resize.html
+++ b/layout/resize/resize.html
@@ -15,7 +15,7 @@
 			
 			#first {
 				width: 200px;
-				height: 200px;
+				height: 50px;
 				border: dashed 1px gray;
 				position: relative;
 			}
@@ -47,8 +47,10 @@
 				</td>
 				<td>
 					<img src='../../../jmvc/images/phui.png'  
-							class='wrap'
-							style="border: solid 1px black"/>
+						width="100"
+						height="100"
+						class='wrap'
+						style="border: solid 1px black"/>
 				</td>
 			</tr>
 	    </table>
