--- a/layout/split/split.css
+++ b/layout/split/split.css
@@ -1,22 +1,8 @@
-.mxui_layout_split 
-{
-	overflow: hidden
-}			
-.mxui_layout_split .hidden
-{
-	display:none;
-}
-.mxui_layout_split .split 
-{
+.mxui_layout_split .split {
 	overflow: auto;
 	float:left;
 }
-.mxui_layout_split .splitter
-{
-	position:relative;
-}
-.mxui_layout_split .vsplitter
-{
+.mxui_layout_split .vsplitter {
 	width:3px;
 	cursor:w-resize;
 	float:left;
@@ -26,8 +12,7 @@
 	border-bottom:solid 1px #b6b6b6;
 	background:url(images/split_sprite.gif) repeat-y -80px 0;
 }
-.mxui_layout_split .hsplitter 
-{
+.mxui_layout_split .hsplitter {
 	width:100%;
 	cursor:s-resize;
 	float:left;
@@ -36,17 +21,14 @@
 	height:3px;
 	background:url(images/split_sprite_horz.gif) repeat-x 0 0;
 }
-.mxui_layout_split .split-hover
-{
+.mxui_layout_split .split-hover {
 	background:#5f83b9;
 }
 .mxui_layout_split .disabled.vsplitter,
-.mxui_layout_split .disabled.hsplitter
-{
+.mxui_layout_split .disabled.hsplitter {
 	background:red;
 }
-.mxui_layout_split .vsplitter .collapser
-{
+.mxui_layout_split .vsplitter .collapser {
 	position:absolute;
 	top:50%;
 	margin-top:-13px;
@@ -55,8 +37,7 @@
 	height:27px;
 	outline:none;
 }
-.mxui_layout_split .hsplitter .collapser
-{
+.mxui_layout_split .hsplitter .collapser {
 	position:absolute;
 	left:50%;
 	margin-left:-13px;
@@ -65,19 +46,15 @@
 	height:3px;
 	outline:none;
 }
-.mxui_layout_split .vsplitter .right-collapse
-{
+.mxui_layout_split .vsplitter .right-collapse {
 	background:#FFF url(images/split_sprite.gif) no-repeat -4px 0;
 }
-.mxui_layout_split .vsplitter .left-collapse
-{
+.mxui_layout_split .vsplitter .left-collapse {
 	background:#FFF url(images/split_sprite.gif) no-repeat -1px 0;
 }
-.mxui_layout_split .hsplitter .right-collapse
-{
+.mxui_layout_split .hsplitter .right-collapse {
 	background:#FFF url(images/split_sprite.gif) no-repeat -8px -4px;
 }
-.mxui_layout_split .hsplitter .left-collapse
-{
+.mxui_layout_split .hsplitter .left-collapse {
 	background:#FFF url(images/split_sprite.gif) no-repeat -8px -1px;
 }
