--- a/layout/split/split.html
+++ b/layout/split/split.html
@@ -180,12 +180,11 @@
 				
 				$(document.body).delegate("a","click", function(ev){
 					var action = this.className,
-						container = $('#' + $(this).parent().data('containerid'));
+					  container = $('#' + $(this).parent().data('containerid'));
 					
 					switch(action){
 						case "add" : 
-							$("<div class='panel add' style='width:150px;float:left;'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>")
-								.appendTo(container);
+						  container.find('.panel:last').clone().removeClass('split').appendTo(container);
 							container.resize();
 							break;
 						case "remove" : 
