getting funcunit test (almost) working

--- a/layout/split/split.html
+++ b/layout/split/split.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-            "http://www.w3.org/TR/html4/strict.dtd">
+						"http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 	<head>
 		<title>splitter</title>
 		<link type="text/css" href="../resize/resize.css" rel="stylesheet" />
-        <style type='text/css'>
-            body {font-family: verdana}
-            .error {border: solid 1px red;}
-            .error_text { color: red; font-size: 10px;}
-            td {padding: 3px;}
+				<style type='text/css'>
+						body {font-family: verdana}
+						.error {border: solid 1px red;}
+						.error_text { color: red; font-size: 10px;}
+						td {padding: 3px;}
 			.container {
 				border: solid 1px;
 				width: 350px;
@@ -24,7 +24,7 @@
 			{
 				border-bottom:solid 1px #CCC;
 			}
-			
+		
 			.min-wide {
 				min-width: 200px;
 			}
@@ -32,128 +32,127 @@
 				min-width: 100px;
 			}
 			.splitter {z-index: 1001}
-			
+		
 			#container.mxui_layout_split .vsplitter {
 				width: 10px;
 			}
-        </style>
+				</style>
 	</head>
 	<body>
-	    <div style='display:none' id='buttons' class='buttons'>
-	    	<a href='javascript://' class="add">Add Panel</a>
-			<a href='javascript://' class="remove">Remove Last Panel</a>
-			<a href='javascript://' class="resize">Resize Parent</a>
-			<a href='javascript://' class="hide">Hide Last</a>
-	    </div>
+			<div style='display:none' id='buttons' class='buttons'>
+				<a href='javascript://' class="add">Add Panel</a>
+				<a href='javascript://' class="remove">Remove Last Panel</a>
+				<a href='javascript://' class="resize">Resize Parent</a>
+				<a href='javascript://' class="hide">Hide Last</a>
+			</div>
 		<h1>Splitter</h1>
-
 		<h3>Vertical: Floating</h3>
 		<p>$(&quot;#container&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</p>
 		<div id='container' class="container vertical-splitter">
-	    	<div class='panel' style="float:left;width:200px;">
+				<div class='panel' style="float:left;width:200px;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-			<div class='panel' style="float:left;width:200px;">			
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			<div class='panel' style="float:left;width:200px;">		
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-			<div class='panel collapsible' style="float:left;width:200px;">			
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			<div class='panel collapsible' style="float:left;width:200px;">		
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-	    </div>
-		
-		
-		
-		
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			</div>
+	
+	
+	
+	
 		<h3>Vertical: Absolute</h3>
 		<p>$(&quot;#container2&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</p>
 		<div id='container2' class="container vertical-splitter">
-	    	<div class='panel' style="width:200px;position:absolute;left:0;">
+				<div class='panel' style="width:200px;position:absolute;left:0;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-			<div class='panel' style="width:200px;position:absolute;left:200px;">			
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			<div class='panel' style="width:200px;position:absolute;left:200px;">		
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-			<div class='panel collapsible' style="width:200px;position:absolute;left:400px;">			
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			<div class='panel collapsible' style="width:200px;position:absolute;left:400px;">		
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-	    </div>
-		
-		
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			</div>
+	
+	
 		<h3>Vertical: Absolute Min Width</h3>
 		<p>$(&quot;#container2&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</p>
 		<div id='container_min_width' class="container vertical-splitter">
-	    	<div class='panel min' style="width:200px; position:absolute;left:0;">
+				<div class='panel min' style="width:200px; position:absolute;left:0;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-			<div class='panel min-wide' style="width:200px;position:absolute;left:200px;">			
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			<div class='panel min-wide' style="width:200px;position:absolute;left:200px;">		
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-			<div class='panel' style="width:200px;position:absolute;left:400px;">			
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			<div class='panel' style="width:200px;position:absolute;left:400px;">		
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-	    </div>
-		
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			</div>
 	
-		
+
+	
 		<h3>Horizontal</h3>
 		<p>$(&quot;#container3&quot;).mxui_layout_split({ direction: &quot;horizontal&quot; });</p>
 		<div id='container3' class="container horizontal-splitter">
-	    	<div class='panel' style="width:100%;height:200px;">
+				<div class='panel' style="width:100%;height:200px;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-			<div class='panel collapsible' style="width:100%;height:200px;">			
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			<div class='panel collapsible' style="width:100%;height:200px;">		
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
-	    </div>
-		
-		
-		
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
+			</div>
+	
+	
+	
 		<h3>Horizontal And Vertical</h3>
 		<p>
 			$(&quot;#container4&quot;).mxui_layout_split({ direction: &quot;vertical&quot; });</br>
 			$(&quot;#container4inside&quot;).mxui_layout_split({ direction: &quot;horizontal&quot; });
 		</p>
 		<div id='container4' class="container vertical-splitter">
-	    	<div class='panel' style="float:left;width:200px;">
+				<div class='panel' style="float:left;width:200px;">
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
 			<div class='panel horizontal-splitter' id="container4inside" style="float:left;width:200px;">
 				<div class="panel">
 						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, 
-				</div>		
-				<div class="panel">	
+						Lorem ipsum dolor sit amet,
+				</div>	
+				<div class="panel">
 			consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	        	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-	    	</div>	
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				</div>
 			</div>
-	    </div>
-					
-        <script type='text/javascript' src='../../../steal/steal.js'></script>
+			</div>
+				
+				<script type='text/javascript' src='../../../steal/steal.js'></script>
 		<script type='text/javascript'>
 			steal('mxui/layout/split','mxui/layout/resize').then(function(){
 				// opposite of $().closest
@@ -161,7 +160,7 @@
 					var $parent = this.parent(selector);
 					return ($parent.length > 0) ? $parent.farthest(selector) : this;
 				};
-				
+			
 				var addButtons = function(){
 					var buttons = $('#buttons').clone()
 									.removeAttr('id')
@@ -169,58 +168,62 @@
 									.show();
 					$(this).farthest('.container').after(buttons);
 				};
-				
+			
 				$('.vertical-splitter').mxui_layout_split({ direction: "vertical", panelClass: "panel" })
 					.each(addButtons).mxui_layout_resize();
-				
+			
 				$('.horizontal-splitter').mxui_layout_split({ direction: "horizontal", panelClass: "panel" })
 					.each(addButtons);
-				
+			
 				$('#container3').mxui_layout_resize();
-				
+			
 				$(document.body).delegate("a","click", function(ev){
 					var action = this.className,
-					  container = $('#' + $(this).parent().data('containerid'));
-					
+						container = $('#' + $(this).parent().data('containerid'));
+				
 					switch(action){
-						case "add" : 
-						  container.find('.panel:last').clone().removeClass('split').appendTo(container);
+						case "add" :
+							container.find('.panel:last').clone()
+								.width(150)
+								.addClass('add')
+								.removeClass('split')
+								.appendTo(container);
 							container.resize();
 							break;
-						case "remove" : 
+						case "remove" :
 							container.find('.panel:last').remove();
 							container.resize();
 							break;
-						case "resize" : 
+						case "resize" :
 							var grow = container.height() !== 600;
-						
+					
 							if(grow){
 								container.height(600).width(500).resize();
 							}else{
 								container.height(400).width(300).resize();
 							}
 							break;
-						case "hide" : 
+						case "hide" :
 							hidething($(ev.target), container);
 							break;
 					}
 				})
-				
-				
-				
+			
+			
+			
 				function hidething(elm, container)
 				{
 					if(elm.text() == "Hide Last"){
 						elm.text('Show Last');
 						container.mxui_layout_split('hidePanel', container.find('.panel:last'));
-						
+					
 					} else {
 						elm.text('Hide Last');
 						container.mxui_layout_split('showPanel', container.find('.panel:last'));
 					}
 				}
-				
 			
+		
 			});
 		</script>
 	</body>
