--- a/layout/split/split.css
+++ b/layout/split/split.css
@@ -24,7 +24,7 @@
 .mxui_layout_split .split-hover {
 	background:#5f83b9;
 }
-.mxui_layout_split .collasped{
+.mxui_layout_split .collapsed{
 	display:none;
 }
 .mxui_layout_split .disabled.vsplitter,
