added rowClass option to allow additional classes to be specified and applied to generated rows

--- a/data/grid/views/list.ejs
+++ b/data/grid/views/list.ejs
@@ -1,5 +1,5 @@
 <% for(var i =0; i < items.length; i++){ %>
-  <tr <%= items[i]%> tabindex='0'>
+  <tr <%= items[i]%> class="<%= rowClass %>" tabindex='0'>
   	<%== $.View(row, items[i] ) %>
   </tr>
 <%}%>
